<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:layout_weight="1"
    tools:context=".EventDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/eventDetailTitle"
                android:textColor="@android:color/background_dark"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:text="@string/eventNameLabel"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventDetailNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:text="@string/eventPhoneLabel"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventDetailPhoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:text="@string/eventDescriptionLabel"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventDetailDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:text="@string/eventDateLabel"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventDetailDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:text="@string/eventActivitiesLabel"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventDetailActivitiesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:text="@string/eventLocationLabel"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/eventLocationMap"
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:text="@string/eventCommentsLabel"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventCommentsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:layout_weight="1">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/noCommentsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/noCommentsLabel"
                android:visibility="gone" />

            <Button
                android:id="@+id/commentEventButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/commentEventButton" />

        </LinearLayout>
</ScrollView>